dataset1235/2025-2/805158916/users/69248557/executions/2651470117_1626817775.log
== SUBMISSION (2025-08-27 03:08:04)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = (4*math.pi*R**3)/3
print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:00:03)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = ((4*math.pi)/3) R**3
print(round(area, 3))
print(round(area, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    volume = ((4*math.pi)/3) R**3
                             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    volume = ((4*math.pi)/3) R**3
                             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    volume = ((4*math.pi)/3) R**3
                             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    volume = ((4*math.pi)/3) R**3
                             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    volume = ((4*math.pi)/3) R**3
                             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    volume = ((4*math.pi)/3) R**3
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:05:41)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = (4*math.pi/3)*R**3
print(round(area, 3))
print(round(area, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.031
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
380.133
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
14246.104
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:48:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

volume = float(input("Digite um volume: "))
area = math.pi * volume**2
print (area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite um volume: 0.031415926535897934
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite um volume: 63.61725123519331
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite um volume: 478.3879062809779
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite um volume: 380.132711084365
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite um volume: 14246.10355137289
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite um volume: 12.566370614359172
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:53:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

r = float(input("Digite um volume: "))
area = round(math.pi * r**2, 3) 
volume = round(((4*math.pi)/3)r**3, 3)
print(area)
print(volume)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    volume = round(((4*math.pi)/3)r**3, 3)
                    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    volume = round(((4*math.pi)/3)r**3, 3)
                    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    volume = round(((4*math.pi)/3)r**3, 3)
                    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    volume = round(((4*math.pi)/3)r**3, 3)
                    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    volume = round(((4*math.pi)/3)r**3, 3)
                    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    volume = round(((4*math.pi)/3)r**3, 3)
                    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:01:27)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = (4*math.pi/3)*R**3
print(round(area, 3))
print(round(area, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.031
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
380.133
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
14246.104
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:07:37)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = (4*math.pi*R**3)/3
print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:07:56)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = (4*math.pi*R**3)/3
print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:00:39)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = ((4*math.pi)/3)*R**3
print(round(area, 3))
print(round(area, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.031
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
380.133
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
14246.104
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:48:12)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import mat

volume = float(input("Digite um volume: "))
area = math.pi * volume**2
print (area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    import mat
ModuleNotFoundError: No module named 'mat'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    import mat
ModuleNotFoundError: No module named 'mat'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    import mat
ModuleNotFoundError: No module named 'mat'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    import mat
ModuleNotFoundError: No module named 'mat'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    import mat
ModuleNotFoundError: No module named 'mat'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    import mat
ModuleNotFoundError: No module named 'mat'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:07:19)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

R = float(input("Digite um Raio: "))
area = round(math.pi * R**2, 3) 
volume = (4*math.pi*R**3)/3
print(round(area, 3))
print(round(area, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.031
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
380.133
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
14246.104
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
